--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,12 +11,13 @@ binding = "AI"
 [[kv_namespaces]]
 binding = "CHAT_HISTORY"
 id = "hgsai"
-preview_id = "a6d5e4f7564d4d6aa21aa4832ecb4449"
+preview_id = "hgsai"
 
 # 环境变量配置
 # 部署前请修改为安全的密码
 [vars]
-CHAT_PASSWORD = "123"
+CHAT_PASSWORD = "a6d5e4f7564d4d6aa21aa4832ecb4449"
+
 
 
 
